--- a/templates/home.html
+++ b/templates/home.html
@@ -46,6 +46,9 @@
 </table>
     <img src="{% static 'images/cr7image.jpg' %}" alt="" width = "300px" height = "400px">
     </div>
+    {% for i in employees %}
+        <h2>{{i}}</h2>
+    {% endfor %}
 
 </body>
 </html>
